[package]
name = "jsml-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
clap = { version = "4.4.0", features = ["derive"] }
html-to-string-macro = "0.2.5"
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4"] }
